<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E5DE"
    tools:context=".signup.SignUpFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <TextView
                    android:id="@+id/createAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/createAccountText"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:endIconMode="clear_text"
                    app:counterMaxLength="10"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
                    app:prefixText="+91"
                    app:prefixTextColor="@color/purple_700"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Contact"
                        android:maxLength="10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/contactInputLayout"
                    app:startIconDrawable="@drawable/ic_baseline_password_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Accept terms and conditions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="12dp"
                    android:text="Already have an account ?"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sign_in"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>